Tue Oct 25 15:22:28 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/TransportDefs.h:

          Removed using the pointer as the DataLink id.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:

          Can not use LONG_MAX for CORBA::Long because on some 
          architectures the long is 8 bytes while a CORBA::Long
          is always 4 bytes.

        * tests/DCPS/Serializer/SerializerTest.cpp:

          Fixed issue with using a long double as a
          character array all the time.

Tue Oct 25 13:18:31 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/WriteDataContainer.h:

          Add a space to some templates.  Things of the form <::DDS::Ident
          won't work because <: is a C++ digraph.

        * dds/DCPS/DataReaderImpl.cpp:

          Fix an initialization order warning

Sun Oct 23 16:19:14 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataSampleList.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/PublicationInstance.h:
        * dds/DCPS/SubscriptionInstance.h:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/WriteDataContainer.h:

          Removed using instance handles as pointers.  Maps of
          handle to pointer were added.

Thu Oct 20 16:09:20 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * LICENSE:

          Change "TAO-DDS" to "TAO DDS" in the LICENSE.

Thu Oct 13 15:13:22 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp: