@@ -1,10 +1,17 @@
 // -*- C++ -*-
 //
 // $Id$
+
+// WARNING!
+// These are outside of the defines to force the compiler to recognize
+//  the SimpleTcpTransport class BEFORE the SimpleTcpAcceptor class.
+//  This is only a problem on gcc (3.4.4) on solaris x86
+#include  "SimpleTcpTransport_rch.h"
+#include  "SimpleTcpTransport.h"
+
 #ifndef TAO_DCPS_SIMPLETCPACCEPTOR_H
 #define TAO_DCPS_SIMPLETCPACCEPTOR_H
 
-#include  "SimpleTcpTransport_rch.h"
 #include  "SimpleTcpConnection.h"
 #include  "ace/Acceptor.h"
 #include  "ace/SOCK_Acceptor.h"
@@ -43,9 +50,6 @@ namespace TAO
 
 } /* namespace TAO */
 
-#if defined (__ACE_INLINE__)
-#include "SimpleTcpAcceptor.inl"
-#endif /* __ACE_INLINE__ */
 
 
 #endif  /* TAO_DCPS_SIMPLETCPACCEPTOR_H */
